<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayListActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cool_pink"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_image_icon"
            android:src="@drawable/back_icon"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/play_list_button"
            android:gravity="center"
            android:text="@string/play_list_button"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/add_icon"
        app:icon="@drawable/add_icon"
        app:iconSize="35dp"
        app:iconTint="@color/cool_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeWidth="2dp"
        app:strokeColor="@color/cool_pink"/>

</androidx.constraintlayout.widget.ConstraintLayout>